force-app/main/default/objects/OrderManagementLedger__c/OrderManagementLedger__c.object-meta.xml
<CustomObject>
    <description>オーダー管理台帳.csvを取り込むオブジェクト
正式レイアウト受領まで開発に必要な項目のみ作成。</description>
    <label>オーダー管理台帳</label>
    <nameField>
        <displayFormat>OML-{YYYYMMDD}-{00000000}</displayFormat>
        <label>オーダー管理台帳番号</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>