force-app/main/default/objects/OrderManagementLedger__c/fields/ItemNumber__c.field-meta.xml
<CustomField>
    <fullName>ItemNumber__c</fullName>
    <description>J項番号相当の想定</description>
    <label>項目番号</label>
    <length>20</length>
    <type>Text</type>
</CustomField>