force-app/main/default/objects/OrderManagementLedger__c/fields/MarginText__c.field-meta.xml
<CustomField>
    <fullName>MarginText__c</fullName>
    <label>販売手数料（テキスト）</label>
    <length>18</length>
    <type>Text</type>
</CustomField>