force-app/main/default/objects/OrderManagementLedger__c/fields/OpportunityNumber__c.field-meta.xml
<CustomField>
    <fullName>OpportunityNumber__c</fullName>
    <label>商談番号</label>
    <length>30</length>
    <type>Text</type>
</CustomField>