force-app/main/default/objects/OrderManagementLedger__c/fields/SR_Number_Hyphenless__c.field-meta.xml
<CustomField>
    <fullName>SR_Number_Hyphenless__c</fullName>
    <description>売報番号からハイフンを取り除いた値</description>
    <formula>SUBSTITUTE( SR_Number__c, &apos;-&apos;, &apos;&apos; )</formula>
    <label>売報番号（ハイフンなし）</label>
    <type>Text</type>
</CustomField>