force-app/main/default/objects/OrderManagementLedger__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>OpportunityNumber__c</columns>
    <columns>SR_Number__c</columns>
    <columns>Margin__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>すべて選択</label>
</ListView>